# rust-realworld-example-app

./: .gitignore  Cargo.toml  Vagrantfile  build.sh  conduit - sample.toml  conduit.architect  locbld.cmd  pgdatabase.sql  readme.md  run.cmd
migrations/2017-09-02-144545_create_db/: down.sql  up.sql
src/: article.rs  comment.rs  main.rs  models.rs  user.rs
